--- a/publications/index.html
+++ b/publications/index.html
@@ -65,11 +65,12 @@
                         <div class="legend-item">
                             <span class="tag tag-domain">Domain</span>
                             <div class="sub-topics">
-                                <p>Power IoT</p>
-                                <p>Finance</p>
                                 <p>Elections</p>
-                                <p>Water</p>
+                                 <p>Finance</p>
+                                 <p>Health</p>
+                                <p>Power IoT</p>
                                 <p>Traffic</p>
+                                 <p>Water</p>
                             </div>
                         </div>
                         <!-- Horizontal line inside the legend box -->
@@ -140,7 +141,9 @@
                                 <a href='https://arxiv.org/abs/2504.07995' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Preprint</span>
                                 <span class="tag tag-method">Chatbots</span>
-                                <span class="tag tag-method">Elections</span>
+                                <span class="tag tag-domain">Elections</span>
+                                <span class="tag tag-domain">Health</span>
+                                <span class="tag tag-domain">Finance</span>
                               <br>
                            </li>
                             
