--- a/publications/index.html
+++ b/publications/index.html
@@ -176,7 +176,7 @@
                                     target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Data Analysis</span>
-                                <span class="tag tag-method">Traffic</span>
+                                <span class="tag tag-domain">Traffic</span>
                                 <br>
                           </li>
 
@@ -219,7 +219,7 @@
                             <a href='https://arxiv.org/abs/2502.12226' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Preprint</span>
                             <span class="tag tag-method">Trust Rating</span>
-                            <span class="tag tag-method">Finance</span>
+                            <span class="tag tag-domain">Finance</span>
                             <br>
                             </li>
 
@@ -271,6 +271,7 @@
                                 <span class="tag tag-type">Preprint</span>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Recommender Systems</span>
+                                 <span class="tag tag-domain">Health</span>
                                 <br>
                             </li>
 
@@ -297,6 +298,7 @@
                                 <span class="tag tag-type">Preprint</span>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Recommender Systems</span>
+                              <span class="tag tag-domain">Health</span>
                                 <br>
                             </li>
 
