--- a/planfm/index.html
+++ b/planfm/index.html
@@ -40,11 +40,11 @@
     <section class="updates">
       <h2>Recent Updates</h2>
       <ul class="updates-list">
-        <li>June 2025 – released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
+        <li>June 2025 – Release of the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
                         <i>GenAI Results Comparator (GAICo)</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
                          consistently [Python, Foundation Models, Library].</li>
-         <li>May 2025 – paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> released on data analysis with plans, travel routes, and recipes representing automated, semi-automated and manual workflows, respectively.</li>
-        <li>Apr 2025 – NAIRR compute resources awarded - NAIRR250014</li>
+         <li>May 2025 – Release of the paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> on data-flow analysis of procedural text with plans, travel routes, and recipes representing automated, semi-automated and manual workflows, respectively.</li>
+        <li>May 2025 – NAIRR compute resources awarded - NAIRR250014</li>
         <li>Jan 2025 – Project kickoff and initial team meeting</li>
       </ul>
     </section>
@@ -65,12 +65,12 @@
            <ul class="funding-list pi-list">
                     <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  
                           (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
+                          target="_blank">project page</a>), Jan 2025. [Foundation Models, Planning, Demonstration]      
                          </il>
 
                       <li> NSF, 2025-2027, <i>Resource Request</i> for NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
                         to support <b>computing</b> for <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">NAIRR project</a>. [Resources, Foundation Models, Planning, Demonstration]      
+                          target="_blank">NAIRR project</a>, May 2025. [Resources, Foundation Models, Planning, Demonstration]      
                          </il>
            </ul>
 
