--- a/planfm/index.html
+++ b/planfm/index.html
@@ -65,12 +65,12 @@
            <ul class="funding-list pi-list">
                     <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  
                           (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">project page</a>), Jan 2025. [Foundation Models, Planning, Demonstration]      
+                          target="_blank">project page</a>), Jan 2025 [Foundation Models, Planning, Demonstration].      
                          </il>
 
                       <li> NSF, 2025-2027, <i>Resource Request</i> for NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
                         to support <b>computing</b> for <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">NAIRR project</a>, May 2025. [Resources, Foundation Models, Planning, Demonstration]      
+                          target="_blank">NAIRR project</a>, May 2025 [Resources, Foundation Models, Planning, Demonstration].      
                          </il>
            </ul>
 
