--- a/funding/index.html
+++ b/funding/index.html
@@ -44,7 +44,8 @@
                 <ul class="funding-list pi-list">
                     <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  
                           (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
+                          target="_blank">NAIRR project page</a>, <a href='https://ai4society.github.io/planfm/'
+                          target="_blank">our project updates</a>). [Foundation Models, Planning, Demonstration]      
                         <span class="tag tag-government-source">Government</span> </il>
 
                       <li> NSF, 2025-2027, <i>Resource Request</i> for NAIRR Pilot Demonstration Project: A Compact Foundation Model for Planning-Like (PL) Tasks for Next Generation Trusted Applications (NAIRR250014),
