--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
 
                       <div class="timeline-content">
-                       <p> Three projects get USC internal funding (1 as PI, 2 as Co-PI) to develop concepts of safe chatbots  
+                       <p> Three proposals get USC internal funding (1 as PI, 2 as Co-PI) to develop concepts of safe chatbots  
                             using neuro-symbolic methods with applications in medical student
                            training and archival (library) information accessibility [Chatbots, Neuro-symbolic].
                       </p>
