--- a/patents/index.html
+++ b/patents/index.html
@@ -74,7 +74,7 @@
                     </li>
                     <li>
                         <strong>USC 1587 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873 (awarded: June 2025)</a>, </strong>
-                        Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation, Feb 13, 2022<br>
+                        Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation<br>
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal</em>
                     </li>
                     <li>
