--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">June</div>
 
+                      <div class="timeline-content">
+                        <p> Second patent of the group, <strong>USC 1587 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873</a>, </strong>
+                        Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation, was awarded. 
+                        </p>
+                    </div>
+                      
                     <div class="timeline-content">
                       <p> We released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
                         <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
