--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
 
                       <div class="timeline-content">
-                       <p> Three proposals get USC internal funding (1 as PI, 2 as Co-PI) to develop concepts of safe chatbots  
+                       <p> Three proposals get <a href='https://www.sc.edu/about/offices_and_divisions/research/news_and_pubs/news/2025/20250602_ASPIRE_ASPIRE_announcement_2025.php' target="_blank">USC internal funding (1 as PI, 2 as Co-PI)</a> to develop concepts of safe chatbots  
                             using neuro-symbolic methods with applications in medical student
                            training and archival (library) information accessibility [Chatbots, Neuro-symbolic].
                       </p>
