--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -40,6 +40,21 @@
           <a href="https://arxiv.org/abs/2505.24258" target="_blank">[Paper]</a>
         </div>
       </div>
+
+      
+        <div class="pub-entry">
+        <h3 class="pub-title">Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis 
+                            Approach and Evolving Categories Representing Shifting Perspectives</h3>
+        <p class="pub-authors"> Vishal Pallagani, Nitin Gupta, Bharath Chandra Muppasani, Biplav Srivastava</p>
+        <p class="pub-venue">Proceedings of the 35th International Conference on Automated Planning and 
+                            Scheduling (ICAPS), 2025, Melbourne, Australia, Nov 2025</p>
+        <div class="pub-links">
+          <a href="papers_local/litevol.pdf" target="_blank">[Paper]</a>
+        </div>
+        <div class="pub-links">
+          <a href="https://ai4society.github.io/LLM-Planning-Viz/index.html#" target="_blank">[Visualization Tool]</a>
+        </div>
+      </div>
       
       <div class="pub-entry">
         <h3 class="pub-title">The Case for Developing a Foundation Model for Planning-like Tasks from Scratch</h3>
