--- a/patents/index.html
+++ b/patents/index.html
@@ -90,22 +90,22 @@
                     </li>
                     <li>
                         <strong>USC 1587 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873 (awarded: June 2025)</a>, </strong>
-                        Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation<br>
+                        Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation, 2022<br>
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal</em>
                     </li>
                     <li>
                         <strong>USC 1532 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983 (awarded: Aug 2024)</a>, </strong>
-                        Robust Useful and General Task-Oriented Virtual Assistants<br>
+                        Robust Useful and General Task-Oriented Virtual Assistants, 2022<br>
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal, Joey Yip</em>
                     </li>
                     <li>
                         <strong>USC 1530, US-20230112486-A1</strong>
-                        Building Teams for Request for Proposals<br>
+                        Building Teams for Request for Proposals, 2022<br>
                         <em>Biplav Srivastava, Tarmo Koppel, Michael Huhns, Michael Mathews, Paul Ziehl, Danielle Mcelwain</em>
                     </li>
                     <li>
                         <strong>USC 1490, US-20220171848-A1</strong>
-                        Synthena: A Method for Synthesizing Dynamic Ensemble-Based Defenses to Counter Adversarial Attacks<br>
+                        Synthena: A Method for Synthesizing Dynamic Ensemble-Based Defenses to Counter Adversarial Attacks, 2021<br>
                         <em>Biplav Srivastava, Ying Meng, Jianhai Su, Pooyan Jamshidi Dermani, Jason M. O’Kane</em>
                     </li>
                     
@@ -116,7 +116,7 @@
                 <ul class="funding-list co-pi-list">
                     <li> 
                         <strong>P202203822US01</strong>
-                        Plansformer - a transformer planner<br>
+                        Plansformer - a transformer planner, 2022<br>
                         <em>Francesca Rossi, Lior Horesh, Vishal Pallagani, Biplav Srivastava, Andrea Loreggia</em>
                     </il>
                 </ul>
