--- a/planfm/index.html
+++ b/planfm/index.html
@@ -45,6 +45,7 @@
                          consistently [Python, Foundation Models, Library].</li>
          <li>May 2025 – Release of the paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> on data-flow analysis of procedural text with plans, travel routes, and recipes, representing automated, semi-automated and manual workflows, respectively.</li>
         <li>May 2025 – NAIRR compute resources awarded - NAIRR250014</li>
+        <li>Feb 2025 – Update to a web tool for <a href='https://ai4society.github.io/LLM-Planning-Viz/index.html#' target="_blank">tracking literature evolution in <b>‘LLM and planning’</b></a> [ICAPS 2025, ICAPS 2024]</li>
         <li>Jan 2025 – Award announced, Project kickoff </li>
       </ul>
     </section>
