--- a/demos/index.html
+++ b/demos/index.html
@@ -87,13 +87,13 @@
                 >[Demo]</a
               >
               <a href="https://arxiv.org/abs/2401.02500" target="_blank" rel="noopener noreferrer"
-                >[2024 Paper]</a
+                >[ICAPS 2024 Paper]</a
               >
               <a
                 href="../publications/papers_local/litevol.pdf"
                 target="_blank"
                 rel="noopener noreferrer"
-                >[2025 Paper]</a
+                >[ICAPS 2025 Paper]</a
               >
             </div>
           </div>
