--- a/publications/index.html
+++ b/publications/index.html
@@ -117,7 +117,8 @@
                                 <a href='https://cacm.acm.org/research/thinking-fast-and-slow-in-human-and-machine-intelligence/'
                                     target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Journal</span>
-                                <span class="tag tag-method">Planning</span>
+                                <span class="tag tag-method">Neuro-Symbolic AI</span>
+                                <span class="tag tag-method">Planning</span>               
                                 <br>
                            </li>
                         
