--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
                       <div class="timeline-date year">2025</div>
                     </div>
 
+                  <!-- July 2025 -->
+                  <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date month">July</div>
+
+                    <div class="timeline-content">
+                      <p>
+                        Major update to <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>! Enhanced support for specialized text metrics, time-series and automated planning, making it even more powerful for LLM output comparison and analysis [Python, Foundation Models, Library].
+                      </p>
+                    </div>
+
+                  </div>
+                  <!-- End of July 2025 -->
         
                   <!-- June 2025 -->
                     <div class="timeline-item">
@@ -138,22 +151,21 @@
                         <p> Second patent of the group, <strong>USC 1587 - <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873</a>, </strong>
                         Multimodal Retrieval and Execution Monitoring Using Rich Recipe Representation, was awarded. 
                         </p>
-                    </div>
+                      </div>
                       
-                    <div class="timeline-content">
-                      <p> We released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
-                        <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
-                         [Python, Foundation Models, Library].
-                      </p>
-                    </div>
+                      <div class="timeline-content">
+                        <p> We released the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
+                          <i>GenAI Results Comparator</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
+                          [Python, Foundation Models, Library].
+                        </p>
+                      </div>
 
                       <div class="timeline-content">
                        <p> Three proposals get <a href='https://www.sc.edu/about/offices_and_divisions/research/news_and_pubs/news/2025/20250602_ASPIRE_ASPIRE_announcement_2025.php' target="_blank">USC internal funding (1 as PI, 2 as Co-PI)</a> to develop concepts of safe chatbots  
                             using neuro-symbolic methods with applications in medical student
                            training and archival (library) information accessibility [Chatbots, Neuro-symbolic].
-                      </p>
-                    </div>
-
+                        </p>
+                      </div>
 
                     </div>
                     <!-- End of June 2025 -->
