--- a/index.html
+++ b/index.html
@@ -135,9 +135,17 @@
 
                     <div class="timeline-content">
                       <p>
-                        Major update to <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>! Enhanced support for specialized text metrics, time-series and automated planning, making it even more powerful for LLM output comparison and analysis [Python, Foundation Models, Library].
+                        Major update to <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>! Enhanced support for specialized text metrics - time-series and automated planning - added for LLM output comparison and analysis [Python, Foundation Models, Library].
                       </p>
                     </div>
+
+                   <div class="timeline-content">
+                      <p>Biplav gave a keynote <a
+                    href='https://bda2025.iiitb.net/keynote_speakers/'
+                    target="_blank">talk</a>, 'Towards Sustainable Communities with Big, Open, Data and Group Recommendations Promoting User Trust' 
+                        at Big Data and AI (BDA) conference, Bengaluru, India on 19 July 2025.
+                    </p>
+                  </div>
 
                   </div>
                   <!-- End of July 2025 -->
