--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     </div>
 
                    <div class="timeline-content">
-                      <p>Biplav gave a keynote <a
+                      <p>Biplav gave a <b>keynote talk</b>,  <a
                     href='https://bda2025.iiitb.net/keynote_speakers/'
-                    target="_blank">talk</a>, 'Towards Sustainable Communities with Big, Open, Data and Group Recommendations Promoting User Trust' 
+                    target="_blank">'Towards Sustainable Communities with Big, Open, Data and Group Recommendations Promoting User Trust'</a>,  
                         at Big Data and AI (BDA) conference, Bengaluru, India on 19 July 2025.
                     </p>
                   </div>
