--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date month">July</div>
 
+                    
+                    <div class="timeline-content">
+                      <p>
+                         <a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a>
+                          successfully defended his dissertation proposal on July 23 - 
+                          <i>Rating AI Models for Robustness Through a Causal Lens</i>
+                      </p>
+                    </div>
+                    
                     <div class="timeline-content">
                       <p>
                         Major update to <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>! Enhanced support for specialized text metrics - time-series and automated planning - added for LLM output comparison and analysis [Python, Foundation Models, Library].
