--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
 
                    <div class="timeline-content">
-                      <p>Biplav gave a keynote talk, <b>Towards Sustainable Communities with Big, Open, Data and Group Recommendations Promoting User Trust' at </b>,  <a
+                      <p>Biplav gave a keynote talk, <i>Towards Sustainable Communities with Big, Open, Data and Group Recommendations Promoting User Trust' at </i>,  <a
                     href='https://bda2025.iiitb.net/keynote_speakers/'
                     target="_blank">'Big Data and AI (BDA) conference</a>, Bengaluru, India on 19 July 2025.
                     </p>
