--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                           exercise recommendation in the context of AI and Yoga. 
                       </p>
                     </div>
-                    
+
+                    </div>
+                  <!-- End of August 2025 -->
                     
                   <!-- July 2025 -->
                   <div class="timeline-item">
