--- a/index.html
+++ b/index.html
@@ -136,8 +136,11 @@
                     
                     <div class="timeline-content">
                       <p>
-                         Biplav completes a month-long Vaibhav Fellowship visit to IIT-BHU to collaborate on personalized
-                          exercise recommendation in the context of AI and Yoga. 
+                         Biplav completes the first <a
+                    href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
+                    target="_blank">VAIBHAV</a>) Fellowship (2025-2028; 17 among 216 selected globally) visit for summer work with <a
+                    href="https://iitbhu.ac.in/">IIT-BHU</a>  on using AI and sensors
+                  for personalized recommendation and monitoring of Yoga's Surya Namaskara (SN; sun salutation) regimen.
                       </p>
                     </div>
 
