--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                       <p>
                          Biplav completes the first <a
                     href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
-                    target="_blank">VAIBHAV</a>) Fellowship (2025-2028; 17 among 216 selected globally) visit for summer work with <a
-                    href="https://iitbhu.ac.in/">IIT-BHU</a>  on using AI and sensors
+                    target="_blank">VAIBHAV</a> Fellowship (2025-2028; 17 among 216 selected globally) visit for summer work with <a
+                    href="https://iitbhu.ac.in/">IIT-BHU</a>  on using AI (group recommendation) and sensors
                   for personalized recommendation and monitoring of Yoga's Surya Namaskara (SN; sun salutation) regimen.
                       </p>
                     </div>
