--- a/publications/index.html
+++ b/publications/index.html
@@ -108,6 +108,16 @@
                                 <br>
                            </li>
 
+                        <li><b>Holistic Explainable AI (H-XAI): Extending Transparency Beyond
+                            Developers in AI-Driven Decision Making </b><br>
+                        <i>Preprint, August 2025</i><br>
+                            Kausik Lakkaraju, Siva Likitha Valluru, Biplav Srivastava
+                              <br>
+                                <a href='https://arxiv.org/abs/2508.05792' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Trust Rating</span>
+                              <br>
+                           </li>
                                                
                             <li><b>Thinking Fast and Slow in Human and Machine Intelligence, 
                                 </b><br>
@@ -124,7 +134,7 @@
                            </li>
                         
                             <li><b>FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</b><br>
-                        <i>Preprint, May 2024</i><br>
+                        <i>Preprint, May 2025</i><br>
                             Vishal Pallagani, Nitin Gupta, John Aydin, Biplav Srivastava
                               <br>
                                 <a href='https://arxiv.org/abs/2505.24258' target="_blank">[Paper]</a>
@@ -861,3 +871,4 @@
 </body>
 
 </html>
+
