--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -39,10 +39,12 @@
                         <b>Quick Start</b>
                      </p>
                      <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-                        <li>Try our <b>SafeChat HIV/AIDS Information Tool</b>: Get reliable info on HIV/AIDS (prevention, treatment, living with it) from trusted sources like UNAIDS. Ask any HIV-related questions.
+                        <li>Intended to help medical students improve interviewing skills with patients by practicing with a
+                            chatbot. Try our <b>SafeChat HIV/AIDS Information Tool</b> yourself: fet reliable information on HIV/AIDS (prevention, 
+                           treatment, living with it) from trusted sources like UNAIDS. 
                            <a href="http://129.114.27.239/">[Try it now]</a>
                         </li>
-                        <li>Explore SafeChat framework for building trustworthy domain-specific chatbots
+                        <li>Intended for chatbot developers. Explore SafeChat framework for building trustworthy domain-specific chatbots
                           <a href="https://arxiv.org/abs/2504.07995" target="_blank">[Paper]</a>
                            <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank">[GitHub]</a>
                         </li>
