--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -140,14 +140,19 @@
                   </ul>
                   <p><i><b>Representative Activities</b></i></p>
                   <ul>
-                     <li>Use of SafeChat in CSCE 580 (Fall 2023) to create chatbot interface for <a
+                     <li>Use of SafeChat in teaching how to build chatbots in <a
+                        href="https://github.com/biplav-s/course-ai-tai-f23">CSCE 580 (Fall 2023; 25 students)</a>. <br>
+                     </li>
+                     <li>Use of SafeChat by student in CSCE 580 (Fall 2023) to create chatbot interface for <a
                         href="https://github.com/vnagpal25/Water-Quality-Chatbot">Water Quality Decider System</a>. <br>
                      </li>
                      <li>Use of SafeChat in creating <a href="https://github.com/vnagpal25/USC-Chatbot.git">Garnet n Talk</a>, a
                         chatbot designed to answer questions about the University of South Carolina. This project was awarded Best
                         Idea in the USC Spring 2024 Hackathon.
                      </li>
-                     <li>Use of SafeChat for chatbots in education, election (Mississippi). <br>
+                     <li>Use of SafeChat for creating chatbot in election for (Mississippi). <br>
+                     </li>
+                     <li>Use of SafeChat for creating <a href="https://arxiv.org/abs/2402.01760">ALLURE chatbot</a> in education. <br>
                      </li>
                   </ul>
                </td>
