--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -138,7 +138,7 @@
                            target="_blank">[Paper]</a>
                      </li>
                   </ul>
-                  <p><i><b>Representative Activities</b></i></p>
+                  <p><i><b>Representative SafeChat Framework Usage and Instances</b></i></p>
                   <ul>
                      <li>Use of SafeChat in teaching how to build chatbots in <a
                         href="https://github.com/biplav-s/course-ai-tai-f23">CSCE 580 (Fall 2023; 25 students)</a>. <br>
