--- a/planfm/index.html
+++ b/planfm/index.html
@@ -40,9 +40,10 @@
     <section class="updates">
       <h2>Recent Updates</h2>
       <ul class="updates-list">
+        <li>June 2025 – Project update to NAIRR community. See <a href='https://figshare.com/collections/NAIRR_Pilot_Demonstration_Projects/7902128' target="_blank"><b>presentation</b></a>, along with others in the cohort. </li>
         <li>June 2025 – Release of the python package, <a href='https://pypi.org/project/GAICo/' target="_blank"><b>gaico</b></a>, 
                         <i>GenAI Results Comparator (GAICo)</i>, to help compare, analyze and visualize outputs from Large Language Models (LLMs)
-                         consistently [Python, Foundation Models, Library].</li>
+                         consistently; over 13k downloads by Aug 2025. [Python, Foundation Models, Library].</li>
          <li>May 2025 – Release of the paper titled <a href="https://arxiv.org/abs/2505.24258">FABLE: A Novel Data-Flow Analysis Benchmark on Procedural Text for Large Language Model Evaluation</a> on data-flow analysis of procedural text with plans, travel routes, and recipes, representing automated, semi-automated and manual workflows, respectively.</li>
         <li>May 2025 – NAIRR compute resources awarded - NAIRR250014</li>
         <li>Feb 2025 – Update to a web tool for <a href='https://ai4society.github.io/LLM-Planning-Viz/index.html#' target="_blank">tracking literature evolution in <b>‘LLM and planning’</b></a> [ICAPS 2025, ICAPS 2024]</li>
@@ -90,3 +91,4 @@
 </body>
 
 </html>
+
