--- a/publications/index.html
+++ b/publications/index.html
@@ -108,6 +108,30 @@
                                 <br>
                            </li>
 
+                        <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse 
+                                 and Multimodal Generative AI Outputs </b><br>
+                        <i>Preprint, August 2025</i><br>
+                            Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
+                              <br>
+                                <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Trust Rating</span>
+                              <br>
+                           </li>
+
+
+                        <li><b>Technology-assisted Personalized Yoga for Better Health - Challenges and Outlook </b><br>
+                        <i>Preprint, August 2025</i><br>
+                            Vivek Kumar, Himanshu Sahu, Hari Prabhat Gupta, Biplav Srivastava
+                              <br>
+                                <a href='https://arxiv.org/abs/2508.18283' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Health</span>
+                                <span class="tag tag-method">Recommender Systems</span>
+                              <br>
+                           </li>
+
+                            
                         <li><b>Holistic Explainable AI (H-XAI): Extending Transparency Beyond
                             Developers in AI-Driven Decision Making </b><br>
                         <i>Preprint, August 2025</i><br>
@@ -871,4 +895,5 @@
 </body>
 
 </html>
+
 
