--- a/publications/index.html
+++ b/publications/index.html
@@ -126,7 +126,7 @@
                               <br>
                                 <a href='https://arxiv.org/abs/2508.18283' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Preprint</span>
-                                <span class="tag tag-method">Health</span>
+                                <span class="tag tag-domain">Health</span>
                                 <span class="tag tag-method">Recommender Systems</span>
                               <br>
                            </li>
@@ -895,5 +895,6 @@
 </body>
 
 </html>
+
 
 
