--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-date month">August</div>
 
+                      <div class="timeline-content">
+                      <p>
+                         Two papers accepted at AAAI Fall Symposium on AAAI Fall Symposium on AI Trustworthiness and Risk
+                          Assessment for Challenged Contexts, <a
+                    href='https://sites.google.com/view/aaai-atracc'
+                    target="_blank">(ATRACC)</a> on time series and explainability.
+                      </p>
+                    </div>
                     
                     <div class="timeline-content">
                       <p>
