--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                       <div class="timeline-content">
                       <p>
-                         Two papers accepted at AAAI Fall Symposium on AAAI Fall Symposium on AI Trustworthiness and Risk
+                         Two papers accepted at AAAI Fall Symposium on AI Trustworthiness and Risk
                           Assessment for Challenged Contexts, <a
                     href='https://sites.google.com/view/aaai-atracc'
                     target="_blank">(ATRACC)</a> on time series and explainability.
