--- a/projects/index.html
+++ b/projects/index.html
@@ -221,6 +221,24 @@
                 <tr>
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
+                            <span style="background-color:hsl(265, 60%, 65%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
+                            Multi-Agent Path Finding (MAPF)
+
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                        </h3>
+                        <i><b>Team: </b>Bharath Muppasani, Ritirupa Dey, Biplav Srivastava, Vignesh Narayanan</i>
+                        <p><b>Description: </b>This project enhances MAPF by developing a scalable hybrid framework and the Multi-Agent Planning Ontology (maPO) to enable on-demand, human-readable explanations for planner behavior and improve transparency.</p>
+                            <span>
+                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./mapf_page/index.html" target="_blank"><b>More Details</b></a>
+                            </span>
+                        
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                        <h3 style="display:flex;align-items:center;">
                             <span style="background-color:hsl(37, 100%, 50%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
                             Insights with Power Data
 
